--- a/public/src/app/portfolio-form/portfolio-form.html
+++ b/public/src/app/portfolio-form/portfolio-form.html
@@ -11,8 +11,8 @@
             <select ngModel name="coins" id="coins">
                 <option *ngFor='let c of coins' ngModel type='text' value='{{c.id}}' name='coin' #sampleInput='ngModel' coin>{{c.name}}</option>
             </select>
-            <label for="Quantity">Quantity</label>
-            <input name='Quantity'type="number" placeholder="0" min="0">
+            <!-- <label for="Quantity">Quantity</label>
+            <input name='Quantity'type="number" placeholder="0" min="0"> -->
             <button class='submit' type="submit">Enter</button>
         </form>
     </div>
